# cubao-gdal

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  Makefile  pybind11.cpp  setup.py
gdal/autotest/gdrivers/data/ogcapi/: request_collections_NaturalEarth_physical_ne_10m_lakes_europe.http_data  request_collections_NaturalEarth_physical_ne_10m_lakes_europe_f_json.http_data  request_collections_NaturalEarth_physical_ne_10m_lakes_europe_items.json_limit_10.http_data  request_collections_NaturalEarth_physical_ne_10m_lakes_europe_items.json_limit_10_crs_http___www.opengis.net_def_crs_OGC_1.3_CRS84.http_data
gdal/autotest/ogr/data/mitab/: all_possible_fields.mid  all_possible_fields.mif
sqlite/: CMakeLists.txt
